<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
        <RelativeLayout android:id="@+id/page_home_ek1"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <View   android:id="@+id/_bg__home_ek2"
                android:background="@drawable/_bg__home_ek2_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/__img___freebg_home"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_marginTop="0dp"
                android:contentDescription="__img___freebg_home"
                android:src="@drawable/__img___freebg_home" />
            <View   android:id="@+id/rectangle_1"
                android:background="@drawable/rectangle_1_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-133dp"
                android:layout_width="match_parent"
                android:layout_height="365dp" />

            <View   android:id="@+id/rectangle_2"
                android:background="@drawable/rectangle_2_shape"
                android:layout_marginStart="50dp"
                android:layout_marginTop="119dp"
                android:layout_centerHorizontal="true"
                android:layout_width="310dp"
                android:layout_height="307dp" />

            <TextView android:id="@+id/nama___ahmad_sayadi"
                android:textSize="19sp"
                android:textColor="@color/_bg__home_ek2_color"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="38dp"
                android:layout_width="291.9dp"
                android:layout_height="31.9dp"
                android:text="@string/nama___ahmad_sayadi_string"
                />

            <TextView android:id="@+id/nrp___31123034"
                android:textSize="19sp"
                android:textColor="@color/_bg__home_ek2_color"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="63dp"
                android:layout_width="291.9dp"
                android:layout_height="31.9dp"
                android:text="@string/nrp___31123034_string"
                />

            <TextView android:id="@+id/twitter"
                android:textSize="16sp"
                android:textColor="@color/twitter_color"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="232dp"
                android:layout_width="64.6dp"
                android:layout_height="27.6dp"
                android:text="@string/twitter_string"
                />

            <TextView android:id="@+id/about_me"
                android:textSize="16sp"
                android:textColor="@color/twitter_color"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="232dp"
                android:layout_width="85.6dp"
                android:layout_height="27.6dp"
                android:text="@string/about_me_string"
                />

            <TextView android:id="@+id/website"
                android:textSize="16sp"
                android:textColor="@color/twitter_color"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="368dp"
                android:layout_width="72.6dp"
                android:layout_height="27.6dp"
                android:text="@string/website_string"
                />

            <TextView android:id="@+id/location"
                android:textSize="16sp"
                android:textColor="@color/twitter_color"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="368dp"
                android:layout_width="76.6dp"
                android:layout_height="27.6dp"
                android:text="@string/location_string"
                />

            <ImageView
                android:id="@+id/vector"
                android:layout_width="73dp"
                android:layout_height="69dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="154dp"
                android:contentDescription="vector"
                android:src="@drawable/vector" />

            <ImageView android:id="@+id/vector_ek1"
                android:src="@drawable/vector_ek1"
                android:contentDescription="vector_ek1"
                android:layout_marginStart="250dp"
                android:layout_marginTop="145dp"
                android:layout_width="66dp"
                android:layout_height="86dp" />
            <RelativeLayout android:id="@+id/website_1"
                android:layout_marginTop="290dp"
                android:layout_marginStart="250dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RelativeLayout android:id="@+id/group_1"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/vector_ek3"
                        android:src="@drawable/vector_ek3"
                        android:contentDescription="vector_ek3"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="64dp"
                        android:layout_height="64dp" />
                </RelativeLayout>
            </RelativeLayout>

            <ImageView android:id="@+id/vector_ek6"
                android:src="@drawable/vector_ek6"
                android:contentDescription="vector_ek6"
                android:layout_marginStart="90dp"
                android:layout_marginTop="285dp"
                android:layout_width="52dp"
                android:layout_height="66dp" />
        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>